# acp

./: .env.local.example  .gitignore  AGENT_ORIENTATION.md  CLAUDE.md  Cargo.toml  DONE.md  Dockerfile  Dockerfile.test-runner  IDEAS.md  KANBAN_BOARD.md  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  install.sh
.claude/: settings.json
acp/: Cargo.toml
acp-lib/: Cargo.toml
acp-lib/src/: error.rs  keychain_impl.rs  lib.rs  plugin_matcher.rs  plugin_runtime.rs  proxy.rs  proxy_transforms.rs  registry.rs  storage.rs  tls.rs  token_cache.rs  types.rs
acp-lib/tests/: e2e_integration_test.rs  migration_test.rs  proxy_plugin_integration_test.rs  proxy_transform_integration_test.rs
acp-server/: Cargo.toml
acp-server/src/: api.rs  launchd.rs  main.rs
acp/src/: auth.rs  client.rs  main.rs
acp/src/commands/: init.rs  new_management_cert.rs
docs/: RELEASING.md  codex-assessment.md  handoff.md  implementation-plan.md  macos-distribution.md  native-app-design.md
docs/https-management-api/: outcomes.md  plan.md
docs/macos-improvements/: macos-gui-implementation-plan.md  macos-gui-plan.md
docs/reference/: architecture.md  gotchas.md  types.md
docs/registry-refactor/: plan.md
docs/rename-to-gap/: macos-gui-outcomes.md  plan.md  task.md  update-token-prefix-task.md
docs/smoke-tests/: data-protection-keychain.md  https-management-api.md
docs/token-plugin-simplification/: plan.md
gap/: Cargo.toml
gap-lib/: Cargo.toml
gap-lib/examples/: verify_cert.rs
gap-lib/src/: error.rs  http_utils.rs  keychain_impl.rs  lib.rs  plugin_matcher.rs  plugin_runtime.rs  proxy.rs  proxy_transforms.rs  registry.rs  storage.rs  tls.rs  types.rs
gap-lib/tests/: documentation_test.rs  e2e_integration_test.rs  integration_test.rs  proxy_plugin_integration_test.rs  proxy_tls_integration_test.rs  proxy_transform_integration_test.rs
gap-server/: Cargo.toml
gap-server/src/: api.rs  launchd.rs  main.rs
gap/src/: client.rs  main.rs
gap/src/commands/: credentials.rs  init.rs  mod.rs  new_management_cert.rs  status.rs
macos-app/: build-dmg.sh  regenerate-icons.sh  setup-app-provisioning.sh  sign-and-package.sh  test-dmg-staging.sh
macos-app/GAP-App/: Package.swift
macos-gui/: README.md
macos-gui/.build/: info.plist
macos-gui/ACP/: ACPApp.swift
macos-gui/ACP.xcodeproj/: project.pbxproj
macos-gui/ACPTests/: ACPClientTests.swift
macos-gui/GAP/: AppState.swift  GAPApp.swift
macos-gui/GAP.xcodeproj/: project.pbxproj
macos-gui/GAPTests/: GAPClientTests.swift  ModelsTests.swift  PasswordHashTests.swift
plans/: mellow-waddling-charm.md
scripts/: macos-notarize.sh  macos-sign.sh
smoke-tests/: cli.md  smoke-test.sh  test-docker-integration.sh
(+17 files in other folders)
