[workspace]
members = ["acp", "acp-server", "acp-lib"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Agent Credential Proxy Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/agent-credential-proxy"

[workspace.dependencies]
# Common dependencies shared across workspace members
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Our own crates
acp-lib = { path = "acp-lib" }
